Allow json response for present
